--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -25,10 +25,32 @@
 - Media Queries
 */
 
-nav {
-  display: inline;
-  float:left;
-}
+/* Nav
+__________________________________________________ */
+
+#nav {
+	width: 100%;
+	float: left;
+	margin: 0 0 3em 0;
+	padding: 0;
+	list-style: none;
+	background-color: #f2f2f2;
+	border-bottom: 1px solid #ccc;
+	border-top: 1px solid #ccc; }
+#nav li {
+	float: left; }
+#nav li a {
+	display: block;
+	padding: 8px 15px;
+	text-decoration: none;
+	font-weight: bold;
+	color: #069;
+	border-right: 1px solid #ccc; }
+#nav li a:hover {
+	color: #c00;
+	background-color: #fff; }
+
+
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -292,9 +314,9 @@ label > .label-body {
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ul {
-  list-style: circle inside; }
+  list-style: none; }
 ol {
-  list-style: decimal inside; }
+  list-style: none; }
 ol, ul {
   padding-left: 0;
   margin-top: 0; }
